--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,10 +1,10 @@
 #Data source
-spring.datasource.url=jdbc:postgresql://localhost:5432/stackoverkata?characterEncoding=UTF-8&useUnicode=true&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:postgresql://localhost:5432/stackoverkata_jm?characterEncoding=UTF-8&useUnicode=true&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=postgres
 spring.datasource.password=root
 
 # Hibernate
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=false
 spring.jpa.properties.hibernate.format_sql=true
