--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #Data source
 spring.datasource.url=jdbc:postgresql://localhost:5432/stackoverkata_jm?characterEncoding=UTF-8&useUnicode=true&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-spring.datasource.username=postgres
+spring.datasource.username=root
 spring.datasource.password=root
 
 # Hibernate
