--- a/pom.xml
+++ b/pom.xml
@@ -148,6 +148,12 @@
             <artifactId>spring-boot-starter-aop</artifactId>
             <version>2.4.5</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.liquibase/liquibase-core -->
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+            <version>4.23.0</version>
+        </dependency>
 
     </dependencies>
 
